--- a/css/login.css
+++ b/css/login.css
@@ -5,57 +5,166 @@ name：Asa_Zhou
 data：2019/1/4
 
 */
-
+html {
+  height: 100%;
+  background: #fff;
+  overflow: hidden;
+}
+body {
+  margin: 0;
+  height: 100%;
+  overflow: hidden;
+}
+button,
+p,
+div,
+form,
+input,
+a,
+i,
+img,
+span,
+ul,
+li {
+  margin: 0;
+  padding: 0;
+  border: 0;
+}
+a {
+  text-decoration: none;
+  out-line: none;
+  color: #fff;
+}
 .wrap {
-    width: 100%;
-    position: relative;
+  width: 100%;
+  height: 100%;
+  position: relative;
+  font-size: 0;
+}
+.wrap .logo{
+  width: 1.2rem;
+  position: absolute;
+  left: 1.275rem;
+  top: 1rem;
+  z-index: 99;
 }
 .wrap .occlusion {
-    width: 100%;
-    position: absolute;
-    top: 0;
-    left: 0;
-    color: #2d88ff;
+  width: 100%;
+  height: 4.8rem;
+  position: absolute;
+  top: 0;
+  left: 0;
+  background: #2d88ff;
+  opacity: 0.2;
 }
 .wrap .wrap-background img {
-    width: 100%;
+  width: 100%;
 }
 
 /*css3波纹*/
 .wrap-waves {
   overflow: hidden;
-  height: 4rem;
   width: 100%;
+  height: 3rem;
   position: absolute;
-  top: 0;
+  bottom: 0;
 }
 .wrap-waves .wave {
-  width: 8rem;
+  width: 100%;
+  height: 3rem;
   transform-origin: center bottom;
   position: absolute;
   left: 0;
   bottom: 0;
 }
 .wrap-waves .w1 {
-  background: url(../images/background.png) no-repeat;
+  background: url(../images/white-background1.png) no-repeat;
   background-size: cover;
-  height: 0.1rem;
-  animation: anim_wave 5s linear infinite;
+  width: 6rem;
+  animation: anim_wave 8s linear infinite;
 }
 .wrap-waves .w2 {
-  background: url(../images/background1.png) no-repeat;
+  background: url(../images/white-background2.png) no-repeat;
   background-size: cover;
-  height: 0.2rem;
+  width: 6rem;
+  animation: anim_wave 7s linear infinite;
+}
+.wrap-waves .w3 {
+  background: url(../images/white-background3.png) no-repeat;
+  background-size: cover;
+  width: 6rem;
   animation: anim_wave 6s linear infinite;
+}
+.wrap-waves .w4 {
+  background: url(../images/white-background4.png) no-repeat;
+  background-size: cover;
+  width: 6rem;
+  animation: anim_wave 4s linear infinite;
 }
 @keyframes anim_wave {
   0% {
     transform: translateX(0) translateZ(0) scaleY(1);
   }
+  25% {
+    transform: translateX(-10%) translateZ(0) scaleY(0.94);
+  }
   50% {
-    transform: translateX(-25%) translateZ(0) scaleY(0.55);
+    transform: translateX(-20%) translateZ(0) scaleY(0.98);
+  }
+  75% {
+    transform: translateX(-10%) translateZ(0) scaleY(0.94);
   }
   100% {
-    transform: translateX(-50%) translateZ(0) scaleY(1);
+    transform: translateX(0) translateZ(0) scaleY(1);
   }
+}
+/* 账号密码登陆 */
+.login {
+  margin: 0 auto;
+  position: absolute;
+  bottom: 0.43rem;
+  z-index: 2;
+  text-align: center;
+  font-size: 0;
+}
+.login input {
+  width: 2.19rem;
+  height: 0.19rem;
+  border: 1px solid #dcdcdc;
+  border-radius: 0.06rem;
+  margin-top: 0.12rem;
+  padding: 0.1rem 0.4rem;
+  font-size: 0.16rem;
+}
+.login input:focus {
+  outline: none;
+}
+.login .user {
+  background: url(../images/user.png) no-repeat 0.1rem;
+  background-size: 0.2rem;
+}
+.login .password {
+  background: url(../images/password.png) no-repeat 0.1rem;
+  background-size: 0.2rem;
+}
+.caveat {
+  font-size: 0.14rem;
+  color: #ff0000;
+  position: absolute;
+  bottom: 1.2rem;
+  left: 0.76rem;
+}
+.login .login-btn {
+  display: inline-block;
+  font-size: 0.2rem;
+  width: 2.99rem;
+  height: 0.4rem;
+  line-height: 0.4rem;
+  background: #2d88ff;
+  border-radius: 0.06rem;
+  text-align: center;
+  margin-top: 0.6rem;
+}
+.login .login-btn:active {
+  opacity: 0.8;
 }
