--- a/css/index.css
+++ b/css/index.css
@@ -27,6 +27,9 @@ li {
   padding: 0;
   border: 0;
 }
+ul, li {
+  list-style: none;
+}
 a {
   text-decoration: none;
   out-line: none;
@@ -57,7 +60,31 @@ a:link {
   background: #2d88ff;
   opacity: 0.8;
 }
-.weui-dialog__btn {
+.weui-form-preview {
+  border-radius: 1.6em 1.6em 0 0;
+  height: 100%;
+}
+.weui-label {
+  color: #888;
+}
+.toolbar {
+  height: 2em;
+  line-height: 2em;
+}
+.toolbar-inner {
+  height: 2em;
+  line-height: 2em;
+}
+.toolbar-inner .title {
+  height: 2em;
+  font-size: 18px;
+}
+.toolbar-inner .close-select {
+  height: 2em;
+  font-size: 18px;
+  color: #2d88ff;
+}
+.weui-cells_radio .weui-check:checked+.weui-icon-checked:before {
   color: #2d88ff;
 }
 
@@ -77,7 +104,7 @@ a:link {
     height: 2rem;
     border-radius: 50% 50%  0 0;
     position: absolute;
-    top: 5.9rem;
+    top: 4.7rem;
     left: -1rem;
     z-index: 1;
 }
@@ -93,7 +120,7 @@ a:link {
     height: 4rem;
     border-radius: 50% 50%  0 0;
     position: absolute;
-    top: 10.9rem;
+    top: 8.9rem;
     left: -2.52rem;
     z-index: 2;
   }
@@ -174,6 +201,10 @@ a:link {
   font-size: 20px;
   font-weight: 400;
 }
+.header .personal em {
+  display: block;
+  font-size: 16px;  
+}
 .header .personal span {
   font-size: 16px;
 }
@@ -249,4 +280,9 @@ a:link {
 .history-record-details label, .history-record-details span {
   color: #555;
   font-size: 16px;
+}
+
+/* 优惠车辆 */
+.parking_information {
+  display: none;
 }
