--- a/css/index.css
+++ b/css/index.css
@@ -30,6 +30,9 @@ li {
 ul, li {
   list-style: none;
 }
+strong, i, em, span {
+  font-style: normal;
+}
 a {
   text-decoration: none;
   out-line: none;
@@ -109,10 +112,7 @@ a:link {
   margin-top: 0;
 }
 .check-invoice {
-  margin-bottom: 3em;
-}
-.weui-media-box {
-  padding: 0;
+  margin-bottom: 2.8em;
 }
 
 /* 登陆页 */
@@ -265,21 +265,20 @@ a:link {
 .account {
   text-align: center;
 }
-.account span {
-  color: #333;
-}
-.account i {
-  display: block;
-  font-style: normal;
-  font-size: 16px;
-  color: #999;
-  line-height: 2em;
-}
 .account .account-message {
   border-right: 1px dashed #ccc;
 }
 .account .account-message:nth-last-child(1) {
   border: none;
+}
+.account .account-message span {
+  display: block;
+  color: #999;
+}
+.account .account-message i {
+  line-height: 2em;
+  font-size: 18px;
+  color: #2d88ff;
 }
 
 /* 头像 */
@@ -320,7 +319,6 @@ a:link {
 }
 /* 修改密码 */
 .change-password {
-  width: 92%; 
   margin: 0 auto; 
 }
 
@@ -329,6 +327,14 @@ a:link {
   text-align: center;
   height: 4em;
   line-height: 4em;
+}
+.history-record {
+  margin-bottom: 0.6em;
+}
+.history-record strong, .history-record i {
+  font-weight: 400;
+  font-size: 16px;
+  color: #555;
 }
 .history-record label {
   color: #2d88ff;
@@ -341,7 +347,6 @@ a:link {
   color: #555;
   font-size: 16px;
 }
-
 /* 优惠车辆 */
 .parking_information {
   display: none;
@@ -349,7 +354,8 @@ a:link {
 
 /* 发票管理 */
 .invoice-head {
-  height: 3em;
+  margin-bottom: 0.4em;
+  height: 2.5em;
   text-align: right;
   align-items: center;
   justify-content: center;
@@ -396,7 +402,7 @@ a:link {
   text-align: center;
 }
 .next-step .weui-btn_mini {
-  margin-top: 0.3em;
+  margin-top: 0.1em;
 }
 .select-all {
   font-size: 16px;
@@ -414,4 +420,38 @@ a:link {
 .next-step .placeholder i {
   font-style: normal;
   color: #2d88ff;
+}
+
+/* 开票记录 */
+.billing-recorrd strong, .billing-recorrd i {
+  font-weight: 400;
+  font-size: 15px;
+  color: #555;
+}
+.billing {
+  margin-bottom: 0.4em;
+}
+
+/* 充值 */
+.recharge-centre {
+  border: 1px solid #2d88ff;
+  color: #2d88ff;
+  border-radius: 0.4em;
+  margin: 0.2em 0.3em;
+  text-align: center;
+  padding: 0.4em 0;
+}
+.recharge-centre p {
+  font-size: 12px;
+}
+.on {
+  background:#2d88ff ;
+  color: white;
+  box-shadow: inset 0 -4px 0 rgba(0,111,255,1);
+}
+.recharge-time {
+  display: none;
+}
+.get-time {
+  color: #000;
 }
