--- a/css/index.css
+++ b/css/index.css
@@ -125,13 +125,12 @@ a:link {
 .logo img {
   width: 8em;
   height: 7.6em;
-  margin-top: 12%;
+  margin-top: 16%;
 }
 .login {
   width: 100%;
   position: absolute;
   bottom: 0;
-  /* background: #f2f2f2; */
   background: url(../images/white-background.png) no-repeat;
   background-size: 100% 20em;
 }
@@ -205,42 +204,21 @@ a:link {
 /* 我的 */
 .header {
   width: 100%;
-  height: 14em;
+  height: 7.4em;
   background: #2d88ff;
   position: relative;
   display: flex;
   align-items: center;
 }
-.header .setting {
-  width: 2em;
-  height: 2em;
-  position: absolute;
-  top: 1.6em;
-  right: 2em;
-  background: url(../images/setting.png) no-repeat;
-  background-size: 2em;
-}
 .header .personal-information {
   width: 100%;
-  padding: 0 1.3em;
-  position: relative;
-  display: flex;
-  flex-flow: row;
-  justify-content: space-between;
-  align-items: center;
-}
-.header .personal-information strong {
-  display: inline-block;
-  width: 1.2em;
-  height: 2em;
-  background: url(../images/arrow.png) no-repeat;
-  background-size: 1.2em 2em;
+  padding: 0 1.2em;
 }
 .header .personal img {
-  width: 7em;
-  height: 7em;
+  width: 4.6em;
+  height: 4.6em;
   border-radius: 50%;
-  border: 0.3em solid #f2f2f2;
+  border: 0.24em solid #f2f2f2;
   margin-right: 1em;
 }
 .header .personal {
@@ -249,15 +227,18 @@ a:link {
   align-items: center;
   flex-direction: row;
 }
-.header .personal p {
+.header .personal-message {
+  margin-left: 0.48em;
+}
+.header .personal-message p {
   font-size: 20px;
   font-weight: 400;
 }
-.header .personal em {
+.header .personal-message em {
   display: block;
   font-size: 16px;  
 }
-.header .personal span {
+.header .personal-message span {
   font-size: 16px;
 }
 
@@ -441,6 +422,9 @@ a:link {
 }
 
 /* 充值 */
+.recharge-amount {
+  flex-wrap: wrap;
+}
 .recharge-centre {
   border: 1px solid #2d88ff;
   color: #2d88ff;
@@ -448,9 +432,21 @@ a:link {
   margin: 0.2em 0.3em;
   text-align: center;
   padding: 0.4em 0;
+  /* 每行4个自动换行 */
+  width: 21.29%;
+  max-width: 21.29%;
+  min-width: 21.29%;
 }
 .recharge-centre p {
   font-size: 12px;
+}
+/* 宽度小于360像素手机显示 */
+@media screen and (max-width: 360px) {
+  .recharge-centre {
+    width: 20.8%;
+    max-width: 20.8%;
+    min-width: 20.8%;
+  }
 }
 .on {
   background:#2d88ff ;
